--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@ hr{
     width: 73.5%;
     height: auto;
     font-family:  'helvetica'; 
-    font-size: 1.1rem; 
+    font-size: 1.11rem; 
     color: rgba(6, 6, 6, 0.959);
     line-height: 24px;
     padding: 10px;
@@ -609,7 +609,7 @@ hr{
     height: auto;
 }
 .kgp img{
-  width: 55%;
+  width: 40%;
     height: auto;
     border-radius: 50%;
 }
@@ -1173,6 +1173,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     
         <p>
           <br>La santé est un droit universel pour tout le monde. Mais comment les personnes handicapées sans ou à faible revenus pourront accéder aux soins médicaux quand elles tombent malades vu que la santé devient une grande affaire d'argent? 
+          <br>
+          <br>
           Sur ce point très crucial, l'approche de Tiki N'Yiki sera de créer divers partenariats avec des hôpitaux, des médécins, des groupes, amicales d'agents soignant, d'infirmières qui accepteraient de donner de leurs temps et/ou de leur savoir-faire pour soigner des enfants handicapés qui manquent de couverture 
          médicale en cas de maladie.
         </p>
@@ -1264,10 +1266,10 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                   </strong>
                 </span>            
                     <p>
-                      <br>La vision de Tiki N'Yiki a pour force motrice Gabriel [Gaby], une personne handicapée qui a plusieurs années d'expérience en ce qui concerne le handicap et la vie des personnes handicapées. Il a travaillé dans plusieurs organisations faîtières par les canaux desquelles il a enseigné des enfants handicapés, animé des journées de sensibilisation par rapport au handicap et l'inclusion sociale au Burkina Faso. Libre codeur il est en train de développer ce site web statique en HTML et CSS pour présenter sa vision de Tiki N'Yiki. Il est un passionné de photographie, d'histoire, de géographie, d'architecture et de hockey sur glace. 
+                      <br>La vision de Tiki N'Yiki a pour force motrice Gabriel C. [Gaby] a plusieurs années d'expérience en ce qui concerne le handicap et la vie des personnes handicapées au Burkina Faso parce que lui-même est une personne handicapée physique de polio. Ainsi, il a travaillé pour plusieurs associations et/ou organisations faîtières par les canaux desquelles il a enseigné des enfants handicapés, animé des journées de sensibilisation par rapport au handicap et l'inclusion sociale au Burkina Faso. Libre codeur il est en train de développer ce site web statique en HTML et CSS pour présenter sa vision de Tiki N'Yiki. Il est un passionné de photographie, d'histoire, de géographie, d'architecture et de hockey sur glace. 
                       <br>
                       <br> 
-                      Sa motivition résulte d'une éducation familiale dont les parents ont inculqué l'esprit de partage à leurs enfants. Selon lui l'envie d'aider autrui surtout les enfants handicapés, a grandement motivé la création de la vision de TIKI N'YIKI durant l'année 2016 au Burkina Faso, son pays d'origine.
+                      Sa motivition résulte d'une éducation familiale dont les parents ont inculqué l'esprit de partage à leurs enfants. Selon lui le fait d'avoir expérimenté une vie avec un handicap et avoir vécu des cas d'exclusion ont fait que Gabriel soit déterminé à aider semblable qui qu'il soit surtout les enfants handicapés du futur. La détermination a alimenté l'implémentation de la vision de Tiki N'Yiki en 2016 à Ziniare au Burkina Faso, son pays d'origine.
                 <br>
                 Il a été le fondateur, cordonnateur et animateur de l'association Paas Neere de 2005, année de sa création jusqu'en 2016. En 2012 il a été décoré CHEVALIER de l'ORDRE du Mérite du Burkina Faso pour ses diverses contributions y compris la création du Centre Paas Neere à Ziniaré. 
                 <br>
