--- a/index.html
+++ b/index.html
@@ -1148,7 +1148,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
      <hr style="color: rgb(13, 31, 136); justify-self: center;"> 
      <span style="background: transparent; font-family: 'georgia'; font-size: 25px; color: rgb(42, 61, 172); text-align: left;">
       <strong>
-        1. L'éducation
+        1. Education
       </strong>
     </span>
   <p>
@@ -1185,7 +1185,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <hr style=" color: rgb(13, 31, 136); justify-self: center;"> 
 
         <span style="background: transparent; font-family: 'georgia'; font-size: 25px; color: rgb(42, 61, 172); text-align: left;">
-          <strong>2. Santé et Soins
+          <strong>2. Santé et Soins Médicaux
           </strong>
         </span>
     
