--- a/index.html
+++ b/index.html
@@ -611,9 +611,9 @@ hr{
 
 .kpt{
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 17.5px;
+  font-size: 17.48px;
   line-height: 24px;
-  color: #000;
+  color: #1d1d1df2;
 }
 
 .kgp{
@@ -846,7 +846,7 @@ function myFunction() {
       
         <a href="https://www.google.com/search?client=firefox-b-d&q=online+calculator" target="_blank">
         <div class="Calculator">
-          <b style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 13px;">Calculator</b>
+          <b style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 13px;">Calculatrice</b>
         </div>
       </a>
   
@@ -1289,16 +1289,21 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                 <div class="kpt">
                     <p>
                       
-                      <br>La vision de Tiki N'Yiki a pour force motrice Gabriel C. [Gaby] qui a plusieurs années d'expérience en ce qui concerne le handicap et la vie des personnes handicapées au Burkina Faso parce que lui-même est une personne handicapée physique de polio. 
-                      Ainsi, il a travaillé pour plusieurs associations et/ou organisations faîtières par lesquelles il a pu enseigner des enfants handicapés, animé des journées de sensibilisation par rapport au handicap et l'inclusion sociale au Burkina Faso. Libre codeur en plus, il se passionne à développer ce site web statique en HTML et CSS pour présenter sa vision de Tiki N'Yiki. Il est un passionné de photographie, d'histoire, de géographie, d'architecture et de hockey sur glace. 
+                      <br>La vision de Tiki N'Yiki a pour force motrice Gabriel C. [Gaby] qui a une décennie d'expérience en ce qui concerne le handicap et la vie des personnes handicapées au Burkina Faso parce qu'il est lui-même une personne handicapée physique de polio. 
+                      Ainsi, il a travaillé pour plusieurs associations et/ou organisations faîtières par lesquelles il a pu enseigner des enfants handicapés, animé des journées de sensibilisation par rapport au handicap et l'inclusion sociale au Burkina Faso. Libre codeur , il se passionne à coder et développer ce site web statique en HTML et CSS pour présenter la vision de Tiki N'Yiki. 
+                      <br>
+                      Il est aussi un passionné de photographie, de lecture, de science, d'histoire, de géographie, d'architecture et de sports sur glace dont le Hockey. 
                       <br>
                       <br> 
-                      Sa motivition résulte d'une éducation familiale dont les parents ont inculqué l'esprit de partage à leurs enfants. Ayant expérimenté une vie marquée très souvent de discriminations et d'exclusion sociale, Gabriel est déterminé à aider les enfants handicapés à s'épanouir et être mieux intégrés dans la société. Sa détermination a alimenté l'implémentation de la vision de Tiki N'Yiki en 2016 à Ziniare au Burkina Faso, son pays d'origine.
+                      Sa motivition résulte d'une éducation familiale dont les parents ont inculqué l'esprit de partage à leurs enfants. Ayant expérimenté une vie marquée très souvent de discriminations et d'exclusion sociale, Gabriel est déterminé à aider les enfants handicapés dans le futur à s'épanouir et être mieux intégrés dans leurs communautés. Sa détermination a alimenté l'implémentation de la vision de Tiki N'Yiki en 2016 à Ziniare au Burkina Faso, son pays d'origine.
                 <br>
                 Il a été le fondateur, cordonnateur et animateur de l'association Paas Neere de 2005, année de sa création jusqu'en 2016. En 2012 il a été décoré CHEVALIER de l'ORDRE du Mérite du Burkina Faso pour ses diverses contributions y compris la création du Centre Paas Neere à Ziniaré. 
                 <br>
                 <br>
-                En 2016 Gabriel nourrit d'autres ambitions. L'idée de projet de Tiki N'Yiki. Quand il a partagé son idée avec ses ami-es dont la plupart vit en Nouvelle Angleterre [Massachusets, Maine, New Hampshire, Vermont], New York, Oregon, Washington State aux Etats-Unis, beaucoup ont trouvé l'idée très intéressante et souhaitent que le projet se réalise et grandisse. Ainsi Gabriel a été invité pour un séjour de 3 mois aux USA pendant l'été 2016 pour participer à des series d'évènements de lévée de fonds le long d'une tournée qui l'a conduit dans les états Américains ci-dessus cités. Ces levées de fonds étaient faits entre ami-es, groupes d'ami-ies ou participation à une foire d'expo-vente d'artisanat ou de conférence pour payer des fournitures scolaires, des vivres pour des enfants handicapés en besoin. 
+                En 2016 Gabriel a nourri un autre projet. Celui de Tiki N'Yiki. Quand il a partagé son idée avec son réseau d'ami-es dont certains vivent en Nouvelle Angleterre [Massachusets, Maine, New Hampshire, Vermont], New York, Oregon, Washington State aux Etats-Unis et d'autres en Europe, beaucoup ont trouvé son idée très intéressante, importante pour la communauté et souhaitent que le projet se réalise et grandisse. 
+                <br>
+                <br>
+                C'est ainsi que Gabriel a été invité pour un séjour de 3 mois aux Etats-Unis durant l'été (14 Juillet au 1er Octobre) 2016 pour participer à des series de fundraising (lévée de fonds) au cours d'une tournée qui l'a conduit de l'Est [Boston]  à l'Ouest [Portland-Olympia] des états-Unis. Ces levées de fonds étaient organisées par des ami-es et consistait à des soupers payants pour de bonnes causes pendant lesquels Gabriel exposait et vendait de l'artisanat du Burkina Faso. Il utlisait cet argent pour financer ses projets y compris l'achat de fournitures scolaires, de vivres ou de moyens de déplacement pour des élèves/étudiants handicapés qui sont dans le besoin. 
                 <br>
                 <br>
                 Mais au délà des soutiens sporadiques à travers des donations, de vente d'artisanat (peinture et batik), l'idée fondamentale est de bâtir un large réseau de donateurs et un conseil d'administration et pouvoir s'assurer de ressources financières pour faire émerger l'idée de projet en résultats concrêts, palpables durables profitant des personnes handicapées dont les enfants. 
