--- a/index.html
+++ b/index.html
@@ -610,9 +610,9 @@ hr{
 }
 
 .kpt{
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 17.48px;
-  line-height: 24px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 17px;
+  line-height: 23px;
   color: #1d1d1df2;
 }
 
@@ -844,7 +844,7 @@ function myFunction() {
         </div>
       </a>
       
-        <a href="https://www.google.com/search?client=firefox-b-d&q=online+calculator" target="_blank">
+        <a href="https://www.online-calculator.com/full-screen-calculator/" target="_blank">
         <div class="Calculator">
           <b style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 13px;">Calculatrice</b>
         </div>
@@ -1190,7 +1190,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         </span>
     
         <p>
-          <br>La santé est un droit universel pour tout le monde. Mais comment les personnes handicapées sans ou à faible revenus pourront accéder aux soins médicaux quand elles tombent malades vu que la santé devient une grande affaire d'argent? 
+          <br>La santé est un droit universel pour tout le monde. Mais comment les personnes handicapées sans ou à faible revenus pourront -elles accéder aux soins médicaux quand elles tombent malades si la santé tend à devenir une grande affaire d'argent? 
           <br>
           <br>
           Sur ce point très crucial, l'approche de Tiki N'Yiki sera de créer divers partenariats avec des hôpitaux, des médécins, des groupes, amicales d'agents soignant, d'infirmières qui accepteraient de donner de leurs temps et/ou de leur savoir-faire pour soigner des enfants handicapés qui manquent de couverture 
