--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                  justify-items: center;
                  background: #fff;
                  width: 100%;
-                 height: 105px;
+                 height: 97px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
@@ -178,8 +178,8 @@
   position: relative;
   justify-content: center;
   align-items: center;
-  width: 63px;
-  height: 61px;
+  width: 62px;
+  height: 58px;
   font-size: 9.25px;
   font-family: 'arial black';
   border-radius: 50%;
@@ -187,7 +187,7 @@
   border: 0.1rem solid #dd346faa;
   color:darkblue;
   padding: 4px;
-  margin-top: -3px;
+  margin-top: -7px;
   margin-left: -3rem;
 }
 
@@ -202,7 +202,7 @@
             justify-content: left;
             align-items: center;
             width: 100%; 
-            height: 150px; 
+            height: 190px; 
             background: rgba(24, 126, 189, 0.996);
             font-family: 'trebuchet ms';
             font-size: 1.5rem;
@@ -224,19 +224,19 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            font-family: georgia;
-            font-size: 18px;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 17px;
             height: 40px;
             width: 100%;
-            color: #0d0d0de5;
+            color: #676767e5;
             background: transparent;
-            margin-top: 0.7rem;
+            margin-top: 0.25rem;
           }
 
           .myDiv:hover{
             border-bottom: 0.8rem solid red;
       color: red;
-      transition: 0.22s ease-in;
+      transition: 0.25s ease-in;
       
           }
 
@@ -245,14 +245,14 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            cursor: pointer;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 17px;
             height: 40px;
             width: 100%;
-            font-size: 18px;
-            cursor: pointer;
-            font-family: georgia;
-            color: #0d0d0de5;
+            color: #676767e5;
             background: transparent;
-            margin-top: 0.7rem;
+            margin-top: 0.25rem;
           }
 
           .myDiv1:hover{
@@ -266,14 +266,14 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            cursor: pointer;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 17px;
             height: 40px;
             width: 100%;
-            font-size: 18px;
-            cursor: pointer;
-            font-family: georgia;
-            color: #0d0d0de5;
+            color: #676767e5;
             background: transparent;
-            margin-top: 0.7rem;
+            margin-top: 0.25rem;
             }
 
           .myDiv2:hover{
@@ -287,14 +287,14 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            cursor: pointer;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 17px;
             height: 40px;
             width: 100%;
-            font-size: 18px;
-            cursor: pointer;
-            font-family: georgia;
-            color: #0d0d0de5;
+            color: #676767e5;
             background: transparent;
-            margin-top: 0.7rem;
+            margin-top: 0.25rem;
            }
 
           .myDiv3:hover{
@@ -308,14 +308,14 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            cursor: pointer;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 17px;
             height: 40px;
             width: 100%;
-            font-size: 18px;
-            cursor: pointer;
-            font-family: georgia;
-            color: #0d0d0de5;
+            color: #676767e5;
             background: transparent;
-            margin-top: 0.7rem;
+            margin-top: 0.25rem;
             }
 
           .myDiv6:hover{
@@ -480,7 +480,6 @@ hr{
 .YT{
   display: grid;
   position: relative;
-  padding: 25px;
   width: 66.5%;
   justify-content: center;
   justify-items: center;
@@ -492,6 +491,11 @@ hr{
  text-align: left; 
  color:rgba(132, 130, 130, 0.975);
  word-spacing: 1px;
+}
+
+.YT:hover{
+  border-bottom: 1rem solid rgba(24, 126, 189, 0.87);
+  animation: 0.5s ease;
 }
 
 .button2{
@@ -927,7 +931,7 @@ function myFunction() {
   <div class="YT"> 
   <b> "Mon conseil aux autres personnes handicapées serait de se concentrer 
     sur les choses que leur handicap ne les empêche pas de bien faire et ne pas regretter les choses avec lesquelles il interfère. 
-    Ne soyez handicapé ni mentalement, ni physiquement"</b> <em style="color: rgba(0, 42, 255, 0.982); font-size: 20px;">[ Stephen Hawkings, métaphysicien et auteur Anglais ]</em>
+    Ne soyez handicapé ni mentalement, ni physiquement"</b> <em style="color: rgba(38, 57, 150, 0.982); family: Arial, Helvetica, sans-serif; font-size: 20px;">[ Stephen Hawkings, métaphysicien et auteur Anglais ]</em>
   </div> 
 
 </a> 
@@ -1001,7 +1005,7 @@ function myFunction() {
         </em> Il bénéficie d'un climat tropical sec de type sahélien caracterisé par 4 mois de pluviométrie et 8 mois de sécheresse. En dépit de cela son économie se repose en grande partie sur l'agriculture, l'élévage ou le maraîchage même si elle commence à se diversifier pour toucher le secteur de services ou le secteur du numérique.
       <br>
       <br>
-        Malgré une population croissante de la population d'à peu près 2 762 500 de personnes handicapées du ravage de la polio, d'autres maladies, de vieillesse ou de cas accidentaux, il est fréquent d'observer qu'un grand nombre de personnes handicapées sont toujours sous-estimées et ignorées. 
+        Malgré une population croissante de personnes handicapées (le dixième de la population totale - 2 millions) dont certain-es suite à la polio ou autres maladies, de vieillesse ou de cas accidentaux, il est fréquent d'observer qu'un grand nombre de personnes handicapées sont toujours sous-estimées, totalement ignorées donc discriminées. 
   
         Ceci n'est pas seulement causé par une culture d'exclusion dûe aux barrières sociales,
         mais aussi par un manque de légifération substantielle sur le handicap et la vie des handicapés. 
@@ -1075,7 +1079,8 @@ Tiki N'Yiki de la par la vision qu'elle a implémentée souhaiterait que dans un
     <br>
     <br>
     Combien d'écoles specialisées sont construites au profit des personnes en besoin au Burkina Faso ? Combien d'établissements publiques ou privés, de lieux publiques de l'administration, de culte, de centres d'achat sont equipés de rampes pour les personnes handicapées ? 
-    Quel quota est réservé aux personnes en situation de handicap qui prennent part aux concours/compétitions/participations publiques auxquels l'éducation physique est une obligation et que les handicapé-es ne sont pas aptes à la pratiquer? Il est difficile de dire exactement des chiffres illustratifs mais à la lumière de nombreux stastistiques, il est d'une certaine certitude qu'il plus faire pour mieux améliorer le vivre-ensemble, l'inclusion, les personnes handicapées en matière d'inclusion. 
+    Quel quota est réservé aux personnes en situation de handicap qui prennent part aux concours/compétitions/participations publiques auxquels l'éducation physique est une obligation et que les handicapé-es ne sont pas aptes à la pratiquer? Il est difficile de dire exactement 
+    des chiffres illustratifs mais à la lumière de nombreux stastistiques, il sera d'une certitude qu'il faut faire plus afin de mieux améliorer et renforcer le vivre-ensemble donc l'inclusion des personnes différentes. 
     <br>
     <br>
     Créer et adapter des infrastructures et services pour ces personnes devrait faire partie des priorités des gouvernements Africains afin de permettre une totale participation des handicapés au devéloppement et à une meilleure intégration sociale.       
@@ -1289,29 +1294,29 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                 <div class="kpt">
                     <p>
                       
-                      <br>La vision de Tiki N'Yiki a pour force motrice Gabriel C. [Gaby] qui a une décennie d'expérience en ce qui concerne le handicap et la vie des personnes handicapées au Burkina Faso parce qu'il est lui-même une personne handicapée physique de polio. 
-                      Ainsi, il a travaillé pour plusieurs associations et/ou organisations faîtières par lesquelles il a pu enseigner des enfants handicapés, animé des journées de sensibilisation par rapport au handicap et l'inclusion sociale au Burkina Faso. Libre codeur , il se passionne à coder et développer ce site web statique en HTML et CSS pour présenter la vision de Tiki N'Yiki. 
+                      <br>La vision de Tiki N'Yiki a pour force motrice Gabriel C. [Gaby] une personne handicapée physique de polio. 
+                      Il a travaillé pour plusieurs associations et/ou organisations faîtières dans lesquelles il a enseigné des enfants handicapés, animé des journées de sensibilisation par rapport au handicap et l'inclusion sociale au Burkina Faso . Fervent défenseur des droits de personnes handicapées, libre codeur, Gabriel se passionne à coder et développer ce site web statique en HTML et CSS pour présenter la vision de Tiki N'Yiki. 
                       <br>
-                      Il est aussi un passionné de photographie, de lecture, de science, d'histoire, de géographie, d'architecture et de sports sur glace dont le Hockey. 
+                      Il est aussi un passionné de photographie, de lecture, de science, d'histoire, de géographie, d'architecture et de sports sur glace dont le hockey. 
                       <br>
                       <br> 
-                      Sa motivition résulte d'une éducation familiale dont les parents ont inculqué l'esprit de partage à leurs enfants. Ayant expérimenté une vie marquée très souvent de discriminations et d'exclusion sociale, Gabriel est déterminé à aider les enfants handicapés dans le futur à s'épanouir et être mieux intégrés dans leurs communautés. Sa détermination a alimenté l'implémentation de la vision de Tiki N'Yiki en 2016 à Ziniare au Burkina Faso, son pays d'origine.
+                      Sa motivition résulte d'une éducation familiale dont les parents ont inculqué l'esprit de partage avec autrui à leurs enfants. Ayant expérimenté une vie marquée très souvent de discriminations et d'exclusion sociale, Gabriel reste déterminé à poser des actes concrets pour aider les enfants handicapés dans le futur à s'épanouir, être mieux acceptés et bien intégrés dans leurs communautés. Sa détermination a alimenté l'implémentation de la vision de Tiki N'Yiki en 2016 à Ziniare au Burkina Faso, son pays d'origine.
                 <br>
-                Il a été le fondateur, cordonnateur et animateur de l'association Paas Neere de 2005, année de sa création jusqu'en 2016. En 2012 il a été décoré CHEVALIER de l'ORDRE du Mérite du Burkina Faso pour ses diverses contributions y compris la création du Centre Paas Neere à Ziniaré. 
-                <br>
-                <br>
-                En 2016 Gabriel a nourri un autre projet. Celui de Tiki N'Yiki. Quand il a partagé son idée avec son réseau d'ami-es dont certains vivent en Nouvelle Angleterre [Massachusets, Maine, New Hampshire, Vermont], New York, Oregon, Washington State aux Etats-Unis et d'autres en Europe, beaucoup ont trouvé son idée très intéressante, importante pour la communauté et souhaitent que le projet se réalise et grandisse. 
+                Il a été le fondateur, cordonnateur et animateur de l'association Paas Neere. 
+                <br>En 2012 il a été décoré CHEVALIER de l'ORDRE du Mérite du Burkina Faso pour ses diverses contributions y compris la création du Centre Paas Neere à Ziniaré. 
                 <br>
                 <br>
-                C'est ainsi que Gabriel a été invité pour un séjour de 3 mois aux Etats-Unis durant l'été (14 Juillet au 1er Octobre) 2016 pour participer à des series de fundraising (lévée de fonds) au cours d'une tournée qui l'a conduit de l'Est [Boston]  à l'Ouest [Portland-Olympia] des Etats-Unis. Ces levées de fonds étaient organisées par des ami-es et consistait à des soupers payants pour de bonnes causes pendant lesquels Gabriel exposait et vendait de l'artisanat du Burkina Faso. Il utlisait cet argent pour financer ses projets y compris l'achat de fournitures scolaires, de vivres ou de moyens de déplacement pour des élèves/étudiants handicapés qui sont dans le besoin. 
+                En 2016 Gabriel a nourri un autre projet. Celui de Tiki N'Yiki. Quand il a partagé son idée avec son réseau d'ami-es dont certain-es vivent en Nouvelle Angleterre [Massachusets, Maine, New Hampshire, Vermont], New York, Oregon, Washington State aux Etats-Unis et d'autres en Europe, une majorité a trouvé son idée très intéressante, importante pour la communauté et souhaite que le projet se réalise et grandisse. 
                 <br>
                 <br>
-                Mais au délà des soutiens sporadiques à travers des donations, de vente d'artisanat (peinture et batik), l'idée fondamentale est de bâtir un large réseau de donateurs et un conseil d'administration et pouvoir s'assurer de ressources financières pour faire émerger l'idée de projet en résultats concrêts, palpables durables profitant des personnes handicapées dont les enfants. 
+                C'est ainsi que Gabriel a été invité pour un séjour de 3 mois aux Etats-Unis durant l'été (14 Juillet au 1er Octobre) 2016 pour participer à des series de fundraising (collecte de fonds) au cours d'une tournée qui l'a conduit de l'Est [Boston]  à l'Ouest [Portland-Olympia] des Etats-Unis. Ces levées de fonds étaient organisées par des réseaux d'ami-es. 
+                L'argent récolté a servi à financer des projets comme l'achat de fournitures scolaires, de vivres ou de moyens de déplacement pour des élèves/étudiants handicapés qui sont dans le besoin au Burkina Faso. 
                 <br>
-                Ce fut le début d'un rêve qu'il veut à tout prix réaliser et aider à améliorer les conditions sociales des personnes vulnérables et plus particulièrement les personnes vivant avec un handicap dont les enfants handicapés. 
+                <br>
+                Mais au délà de ces collectes de fonds et donations sporadiques, l'idée fondamentale est de créer une fondation avec un conseil d'administration et un comité exécutif pour bien réaliser les projets et atteindre largement les objectifs. Faire émerger l'idée de projet en résultats concrêts, palpables, durables pour les personnes handicapées fait partie du focus de Tiki N'Yiki et de Gabriel lui-même. 
                 <br>
                 <br>
-                Malheureusement et heureusement Gabriel était obligé de quitter son pays le Burkina Faso en 2017 pour se réfugier au Canada pour sa sécurité non seulement pour ses opinions politiques mais aussi parce que son pays natal a basculé dans un cycle infernal de violence causée par un terrorisme cruel et sanguinaire. Présentement Gabriel est un résident permanent Canadien et veut étudier en Programmation Informatique pour bien appuyer la vision de Tiki N'Yiki en créant une accadémie d'informatique dont des étudiants handicapés seront des favoris en termes d'enrollement . C'est pour ce faire  qu'il souhaite continuer la vision de loin en mobilisant des fonds pour les projets. Soutenir l'éducation des enfants handicapés afin de les permettre d'avoir des opportunités, pouvoir réaliser leurs rêves a toujours été un crédo de Gabriel.
+                Malheureusement et heureusement Gabriel était obligé de quitter son pays le Burkina Faso en 2017 pour se réfugier au Canada pour sa sécurité non seulement pour ses opinions politiques mais aussi parce que son pays natal a basculé dans un cycle infernal de violence causée par un terrorisme cruel et sanguinaire. Présentement Gabriel est un résident permanent Canadien et veut étudier en rogrammation informatique afin de fonder une accadémie d'informatique dont les premiers bénéficiaires seront prioritairement des étudiants handicapés en termes d'enrollement . C'est pour ce faire  qu'il souhaite continuer la vision de loin en mobilisant des fonds pour les projets. Soutenir l'éducation des enfants handicapés afin de les permettre d'avoir des opportunités, pouvoir réaliser leurs rêves a toujours été un crédo de Gabriel.
                 <br>
                 <br>
                   </p> 
