--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@ hr{
 }
 .kptr{
   display: grid;
-  grid-template-columns: 1.25fr 0.75fr;
+  grid-template-columns: 1.15fr 0.85fr;
   column-gap: 1rem;
   justify-items: center;
   justify-content: space-between;
@@ -614,10 +614,10 @@ hr{
 }
 
 .kpt{
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  font-size: 17px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 15.97px;
   line-height: 23px;
-  color: #1d1d1df2;
+  color: #0b0b0bfa;
 }
 
 .kgp{
@@ -627,7 +627,7 @@ hr{
     justify-content: center;
     text-align: left;
     width: 100%;
-    height: 22%;
+    height: 25%;
 }
 .kgp img{
     width: 100%;
@@ -1294,9 +1294,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                 <div class="kpt">
                     <p>
                       
-                      <br>La vision de Tiki N'Yiki a pour force motrice Gabriel C. [Gaby] une personne handicapée physique de polio. 
-                      Il a travaillé pour plusieurs associations et/ou organisations faîtières dans lesquelles il a enseigné des enfants handicapés, animé des journées de sensibilisation par rapport au handicap et l'inclusion sociale au Burkina Faso . Fervent défenseur des droits de personnes handicapées, libre codeur, Gabriel se passionne à coder et développer ce site web statique en HTML et CSS pour présenter la vision de Tiki N'Yiki. 
-                      <br>
+                      <br>La vision de Tiki N'Yiki a pour force motrice Gabriel C. [Gaby] une personne handicapée physique de polio. Il a étudié au lycée Bassy de Ziniaré et au lycée Newton de Ouagadougou.
+                      Par la suite il a travaillé pour plusieurs associations et/ou organisations faîtières par lesquelles il a enseigné des enfants handicapés, animé des journées de sensibilisation par rapport au handicap et l'inclusion sociale au Burkina Faso . Fervent défenseur des droits de personnes handicapées, codeur, Gabriel se passionne à coder et développer ce site web statique en HTML et CSS pour présenter la vision de Tiki N'Yiki. 
                       Il est aussi un passionné de photographie, de lecture, de science, d'histoire, de géographie, d'architecture et de sports sur glace dont le hockey. 
                       <br>
                       <br> 
@@ -1326,7 +1325,9 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <img src="https://www.zupimages.net/up/23/22/znug.jpg" alt="At Saint-Côme-Quebec">
       <figure>
         <figcaption style="font-family: 'verdana'; font-size: 13px; color: #0356da">
-        Gabriel dans la nature de Saint-Côme - Lanaudière-Québec [Juin 2023 Canada]
+        Gabriel à Saint-Côme * Lanaudière-QC 
+        <br>
+        [Juin 2023 Canada]
       </figcaption> 
     </figure>
         </div>
