--- a/index.html
+++ b/index.html
@@ -491,10 +491,12 @@ hr{
  text-align: left; 
  color:rgba(132, 130, 130, 0.975);
  word-spacing: 1px;
+ border-bottom: 1rem solid rgba(24, 126, 189, 0.87);
 }
 
 .YT:hover{
-  border-bottom: 1rem solid rgba(24, 126, 189, 0.87);
+  color: #02a6ed;
+  border-bottom: 1rem solid red;
   animation: 0.5s ease;
 }
 
