--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@ function myFunction() {
 
 </div>
 
-<div class="navbar0"><p style="margin-top: 2.5rem; margin-left: 7rem;">Bienvenue ! Ce site est en développement. Bonne Visite !</p></div>
+<div class="navbar0"><p style="margin-top: 4rem; margin-left: 7rem;">Bienvenue sur ce site en développement ! Bonne Visite !</p></div>
 
 <div class="fwrapper">
 
