--- a/index.html
+++ b/index.html
@@ -491,9 +491,8 @@ hr{
  text-align: left; 
  color:rgba(151, 149, 149, 0.975);
  word-spacing: 1px;
- margin-top: -4.55rem;
- border-top: 0.15rem solid rgba(197, 197, 197, 0.744);
- border-bottom: 0.15rem solid rgba(197, 197, 197, 0.744);
+ margin-top: -4rem;
+ border-bottom: 0.12rem solid rgba(197, 197, 197, 0.744);
 }
 
 .YT:hover{
@@ -521,6 +520,7 @@ height: auto;
 .YTPP{
   display: grid;
   grid-template-rows: 0.8fr 1.2fr;
+  padding: 4px;
 }
 
 .TYPP img{
@@ -978,7 +978,8 @@ function myFunction() {
         <b> Mon conseil aux autres personnes handicapées serait de se concentrer 
           sur les choses que leur handicap ne les empêche pas de bien faire et ne pas regretter les choses avec lesquelles il interfère. 
           Ne soyez handicapé ni mentalement, ni physiquement 
-          <em style="color: rgb(0, 128, 255); family: Arial, Helvetica, sans-serif; font-size: 12px;">[Stephen Hawking, métaphysicien, cosmologiste et auteur Anglais]</em>
+        <br>
+        <em style="color: rgb(0, 128, 255); family: Arial, Helvetica, sans-serif; font-size: 11px;">[Stephen Hawking, métaphysicien, cosmologiste et auteur Anglais]</em>
       
         </b>
         </div>
@@ -986,8 +987,8 @@ function myFunction() {
 
       <a href="https://www.hawking.org.uk/" target="_blank">
         <div class="YTPP">
-          <div class="TYP" style="border-left: 0.25rem solid rgba(203, 203, 203, 0.876); border-right: 0.25rem solid rgba(203, 203, 203, 0.876); padding: 15px,justify-content: center; align-items: center; display: flex;">
-          <p style="color:rgba(8, 130, 253, 0.904); font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 25px;"> <b> L'intelligence est la faculté de s'adapter au changement</b> </p>
+          <div class="TYP" style="border-left: 0.25rem solid rgba(203, 203, 203, 0.876); border-top: 0.25rem solid rgba(203, 203, 203, 0.876); border-right: 0.25rem solid rgba(203, 203, 203, 0.876); padding: 15px,justify-content: center; align-items: center; display: flex;">
+          <p style="color:rgba(8, 130, 253, 0.904); font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 24px; padding: 6px;"> <b> L'intelligence est la faculté de s'adapter au changement</b> </p>
         </div> 
         <div class="TYPP">
         <img src="https://images.news18.com/ibnlive/uploads/2018/03/Stephen-Hawking4.jpg?impolicy=website&width=600&height=600" alt="Stephen Hawking">
