--- a/index.html
+++ b/index.html
@@ -508,6 +508,11 @@ hr{
 .YTY img{
 width: 100%;
 height: auto;
+opacity: 0.88;
+}
+
+.YTY img:hover{
+opacity: 1;
 }
 
 .YTP{
@@ -526,6 +531,11 @@ height: auto;
 .TYPP img{
   width: 100%;
   height: auto;
+opacity: 0.88;
+}
+
+.TYPP img:hover{
+opacity: 1;
 }
 
 .button2{
@@ -979,7 +989,7 @@ function myFunction() {
           sur les choses que leur handicap ne les empêche pas de bien faire et ne pas regretter les choses avec lesquelles il interfère. 
           Ne soyez handicapé ni mentalement, ni physiquement 
         <br>
-        <em style="color: rgb(0, 128, 255); family: Arial, Helvetica, sans-serif; font-size: 11px;">[Stephen Hawking, métaphysicien, cosmologiste et auteur Anglais]</em>
+        <em style="color: rgb(0, 128, 255); family: Arial, Helvetica, sans-serif; font-size: 12px;">[Stephen Hawking, métaphysicien, cosmologue et auteur Anglais]</em>
       
         </b>
         </div>
