--- a/index.html
+++ b/index.html
@@ -567,13 +567,14 @@ opacity: 1;
     align-items: center;
     position: relative;
     overflow: hidden;
-    width: 72%;
+    width: 73.5%;
     height: 520px;
     background-color: #fff;
     font-family: 'verdana';
     font-size: 12px;
     color:#000;
     margin-top: 3rem;
+    
 }
 
 .KRT{
@@ -584,6 +585,7 @@ opacity: 1;
   animation: auto 12s infinite ease-in;
     animation-delay: 4s;
     position: absolute;
+    padding: 10px;
 }
 
 .k1-image img{
@@ -611,6 +613,7 @@ opacity: 1;
   animation: auto 12s infinite ease-in;
     animation-delay: 12s;
     position: absolute;
+    padding: 10px;
 }
 .k2-image img{
   width: 100%;
@@ -634,6 +637,7 @@ opacity: 1;
 animation: auto 12s infinite ease-in;
     animation-delay: 8s;
     position: absolute;
+    padding: 10px;
 }
 .k3-image img{
   width: 100%;
@@ -1040,7 +1044,7 @@ function myFunction() {
       <div class="KRT">
                     <div>
                         <div style="text-align: center; padding: 5px; background: #00f; color: #fff; font-family: 'verdana'; font-size: 15px;">
-                          Gabriel donne un de ses derniers cours avant de partir se réfugier au Canada pour des raisons sécuritaires
+                          Gabriel donne un des derniers cours avant de se réfugier au Canada pour des raisons sécuritaires
                         </div>
 
                         <div class="k1-image">
