--- a/index.html
+++ b/index.html
@@ -1488,10 +1488,13 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                       Il est aussi un passionné de photographie, de lecture, de science, d'histoire, de géographie, d'architecture et de sports sur glace dont le hockey. 
                       <br>
                       <br> 
-                      Sa motivition résulte d'une éducation familiale dont les parents ont inculqué l'esprit de partage avec autrui à leurs enfants. En plus ayant expérimenté une vie marquée très souvent de discriminations et d'exclusion sociale, Gabriel a bien sûr été impacté et inspiré. Ainsi il est déterminé à faire quelque pour améliorer les conditions de vie des personnes handicapées dont les enfants pour qu'ils soient mieux acceptés et bien intégrés dans leurs communautés.
-                <br>
+                      Sa motivition résulte d'une éducation familiale dont les parents ont inculqué l'esprit de partage avec autrui à leurs enfants. En plus ayant expérimenté une vie marquée très souvent de discriminations et d'exclusion sociale, Gabriel a bien sûr été impacté, inspiré et déterminé à faire quelque chose pour contribuer à améliorer les conditions de vie des personnes handicapées dont les enfants pour qu'ils soient mieux acceptés et bien intégrés dans leurs communautés.
+                      <br>
+                      <br>
                 En 2006 il a fondé, co-dirigé et animé l'association Paas Neere à Ziniare afin de participer à l'alpahbétisation des personnes handicapées adultes. 
-                En 2012 il a été décoré CHEVALIER de l'ORDRE du Mérite du Burkina Faso pour ses diverses contributions y compris la création du Centre Paas Neere à Ziniaré. 
+                <br>
+                <br>
+                En 2012 il a été décoré CHEVALIER de l'ORDRE du Mérite du Burkina Faso pour sa contribution à l'établissement du Centre Paas Neere à Ziniaré. 
                 <br>
                 <br>
                 En 2016 Gabriel a nourri l'idée du projet de Tiki N'Yiki. Quand il a partagé son idée avec son réseau d'ami-es dont certain-es vivent en <a href="https://ontheworldmap.com/usa/map-of-new-england-max.jpg" target="_blank">Nouvelle Angleterre [Massachusets, Maine, New Hampshire, Vermont, Rhodes Island, Connecticut] </a>, New York, Oregon, Washington State aux <a href="https://as2.ftcdn.net/v2/jpg/01/79/14/47/1000_F_179144742_ci1Hr8CSh7WpCPYT1HL2A7v7PbjHcZh4.jpg"target="_blank"> Etats-Unis </a> et d'autres en Suisse et en France, une majorité a trouvé  l'idée très intéressante et importante pour la communauté. 
@@ -1507,7 +1510,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                 Mais au délà de ces collectes de fonds sporadiques, l'idée fondamentale était de créer une fondation avec un conseil d'administration et un comité exécutif pour bien réaliser les projets et atteindre largement les objectifs. Faire émerger l'idée de projet en résultats concrêts, palpables, durables pour les personnes handicapées fait partie du focus de Tiki N'Yiki. 
                 <br>
                 <br>
-                Malheureusement et heureusement Gabriel était obligé de quitter son pays le <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso </a> en 2017 pour se réfugier au <a href="https://www.canada.ca/fr.html" target="_blank">Canada </a>pour sa sécurité non seulement pour ses opinions politiques mais aussi son pays natal a basculé dans un cycle infernal de violence causée par un terrorisme cruel et sanguinaire. Présentement Gabriel est un résident permanent Canadien et veut étudier en programmation informatique puis fonder une accadémie d'informatique au Burkina Faso dont les bénéficiaires prioritaires seront des étudiant-es handicapé-es. C'est pour ce faire qu'il souhaite continuer la vision de loin en mobilisant des fonds pour les projets. Soutenir l'éducation des enfants handicapés afin de les permettre d'avoir des opportunités, pouvoir réaliser leurs rêves a toujours été un crédo de Gabriel.
+                En 2017 malheureusement et heureusement Gabriel était obligé de quitter son pays le <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso </a> pour s'exiler au <a href="https://www.canada.ca/fr.html" target="_blank">Canada </a>pour sa propre sécurité non seulement à cause de ses opinions politiques mais aussi le Burkina Faso qu'il aime tant a basculé dans un cycle infernal de violence causée par un terrorisme cruel et sanguinaire. Présentement Gabriel est un résident permanent Canadien et veut étudier en programmation informatique puis fonder une accadémie d'informatique au Burkina Faso dont les bénéficiaires prioritaires seront des étudiant-es handicapé-es. C'est pour ce faire qu'il souhaite continuer la vision de loin en mobilisant des fonds pour les projets. Soutenir l'éducation des enfants handicapés afin de les permettre d'avoir des opportunités, pouvoir réaliser leurs rêves a toujours été un crédo de Gabriel.
                 <br>
                 <br>
                   </p> 
