--- a/index.html
+++ b/index.html
@@ -1505,7 +1505,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                 <br>
                 <br>
                 En 2017 malheureusement et heureusement Gabriel a pu quitter le <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso </a> pour s'exiler au <a href="https://www.canada.ca/fr.html" target="_blank">Canada </a>pour sa sécurité à cause de ses opinions politiques et du basculement du pays dans la violence du terrorisme cruel et sanguinaire. Les activités de Tiki N'Yiki ont été beaucoup affectées par cette crise. Présentement Gabriel est un résident permanent Canadien et veut étudier en programmation informatique afin de pouvoir 
-                fonder un jour une accadémie  mixte d'informatique avec une priorité portée sur les étudiant-es handicapé-es. Pour ce faire il veut continuer à mobiliser des ressources humaines de part et d'autre de l'océean Atlantique autour d'une fondation qu'il veut créer et qui va travailler fort dans la recherche de fonds pour pouvoir construire un jour l'Accadémie Tiki N'Yiki.
+                fonder un jour une accadémie  mixte d'informatique avec une priorité portée sur les étudiant-es handicapé-es. Pour ce faire il veut créer une fondation pour mieux encadrer les projets y compris la construction de l'Accadémie Tiki N'Yiki.
                 <br>
                 <br>
                   </p> 
