--- a/index.html
+++ b/index.html
@@ -1252,7 +1252,7 @@ Tiki N'Yiki de la par la vision qu'elle a implémentée souhaiterait que dans un
 </span>
     <br>
     <br>Les personnes handicapées sont discriminées partout à travers le monde. Mais elles vivent les plus pires des scénarios en termes de discriminations quotidiennes entre autres en Afrique et spécialement au Burkina Faso.
-    Comment se fait-il que des personnes handicapées physiquement dépendant et vivant isolées soient oubliées quand il s'agit de leur apporter à manger ?  Les faire prendre un bain ou l'apporter un besoin souhaité ?
+    Comment se fait-il que des personnes handicapées physiquement dépendant et vivant isolées soient oubliées quand il s'agit de leur apporter à manger ? Oublier de les faire prendre un bain ou leur apporter un besoin quelconque souhaité ?
     Pourquoi certaines personnes handicapées sont souvent cachées pendant certaines cérémonies se déroulant dans leurs propres familles ? Pourquoi elles sont mises de côté quand il s'agit de recevoir de soins médicaux qu'il faut ? 
     L'unique réponse satisfaisante et commune à ces questions est: La DISCRIMINATION.
     <br>
