--- a/index.html
+++ b/index.html
@@ -1003,13 +1003,13 @@ function myFunction() {
             </a>
 
 
-    <a href="#" target="blank"> 
+    <a href="https://www.education.gov.bf/accueil" target="blank"> 
         <div class="myDiv1">  
           <b>Education</b>
         </div>
     </a>
 
-            <a href="#" target="blank"> 
+            <a href="https://www.sante.gov.bf/accueil" target="blank"> 
                 <div  class="myDiv2">
                   <b>Santé et Soins </b>
             </div>
@@ -1406,7 +1406,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <p>
           <br>Il n'y a aucun doute que quand les un-es mangent à leur faim et jettent les restes dans les poubelles, à quelque part à travers le monde, il y a aussi d'autres qui meurent de faim. 
           <br>
-          Malheureusement c'est une réalité paradoxale qui touche un grand nombre de gens. Tiki N'Yiki ne peut résoudre cette équation avec un coup de bâton. Elle propose deux (2) approches pour mitiger cette réalité. 
+           C'est une réalité paradoxale qui touche malheureusement un grand nombre de gens. Tiki N'Yiki ne peut pas résoudre cinsécurité alimentaire avec un coup de bâton. Néanmoins elle propose trois (3) approches pour permettre de mitiger cette réalité vis-à-vis des peronnes dont le projet soutient. 
           <br>
           <br>
           1. La première approche est d'apporter une aide alimentaire immédiate ou des fonds pour payer des vivres et permettre aux étudiant-es handicapé-es de ne pas rompre leur cursus scolaire ou universitaire. 
@@ -1414,12 +1414,11 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
           <br>
           2. La seconde approche est de sensibiliser l'opinion par rapport à l'importance et à la manière de faire pour atteindre une sécurité alimentaire pour tous et de manière définitive.
           
-          <a href="https://fr.wikipedia.org/wiki/Agriculture_en_Isra%C3%ABl" target="_blank"><em style="color: #052ef8;">(L'exemple des Kibboutz en Israêl est un exemple à explorer).</em> 
+          <a href="https://fr.wikipedia.org/wiki/Agriculture_en_Isra%C3%ABl" target="_blank"><em style="color: #052ef8;">(Le Kibboutz est un exemple à explorer).</em> 
           </a>
           <br>
           <br>
-          Par ailleurs les nouvelles technologies vont grandement contribuer à amélorer les productions agricoles en optimisant les systèmes d'irrigation de manière controlée.
-          Mais comment concrétiser cela? Les habitudes doivent fondamentalement changer pour integrer de nouvelles procedures de production en respectant l'environnement. 
+          3. La troisième approche est d'explorer à inclure des moyens nouveaux tels que les nouvelles technologies pour améliorer les productions agricoles. Les producteurs intégrant l'utilisation des nouvelles technologies dans leur processus de prodcution vont pouvoir analyser, prévoir, décéler, réguler, contrôler ou corriger certaines chosess au cours de la production. En d'autres termes cela siginifie que des technologies de surveillance, de contrôle, de sélection ou de détection vont assister le producteur pour mieux optimiser son rendement tout en respectant l'environnement. 
         </p>
         <img src="https://www.zupimages.net/up/22/51/99tx.jpg" alt="Vivres à distribuer aux étudiant-es handicapé-es">
         <figure>
@@ -1481,8 +1480,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                 <div class="kpt">
                     <p>
                       
-                      <br>La vision de Tiki N'Yiki a pour force motrice Gabriel C. dit Gaby, une personne handicapée physique des suites de poliomyélite. Il a étudié au lycée Bassy de <a href="https://civitac.org/spip.php?article447" target="_blank">Ziniaré</a> et au lycée <a href="https://www.africabizinfo.com/fr-BF/lyc%C3%A9e-newton-descartes" target="_blank">Newton Descartes</a> de <a href="https://mairie-ouaga.bf/accueil" target="_blank">Ouagadougou.</a>
-                      Par la suite il a travaillé pour plusieurs associations et/ou organisations faîtières par lesquelles il a enseigné des enfants handicapés, animé des journées de sensibilisation par rapport au handicap et l'inclusion sociale au <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso.</a> Fervent défenseur des droits de personnes handicapées, Gabriel se passionne à coder ce site web statique en <a href="https://www.codecademy.com/learn/learn-html" target="_blank"> HTML</a> et <a href="https://www.codecademy.com/learn/learn-css?g_network=g&g_productchannel=&g_adid=640978473086&g_locinterest=&g_keyword=learn%20css&g_acctid=243-039-7011&g_adtype=&g_keywordid=kwd-295916433260&g_ifcreative=&g_campaign=account&g_locphysical=9000903&g_adgroupid=143797140665&g_productid=&g_source={sourceid}&g_merchantid=&g_placement=&g_partition=&g_campaignid=19230645493&g_ifproduct=&utm_id=t_kwd-295916433260:ag_143797140665:cp_19230645493:n_g:d_c&utm_source=google&utm_medium=paid-search&utm_term=learn%20css&utm_campaign=ESC_Language:_Basic_-_Exact&utm_content=640978473086&g_adtype=search&g_acctid=243-039-7011&gclid=EAIaIQobChMImIPLv6Sz_wIVbevjBx1MVgAoEAAYAiAAEgL9hfD_BwE" target="_blank">CSS</a> pour présenter la vision de Tiki N'Yiki. 
+                      <br>La vision de Tiki N'Yiki a pour force motrice Gabriel C. dit Gaby, une personne handicapée physique des suites de poliomyélite qui a étudié au lycée Bassy de <a href="https://civitac.org/spip.php?article447" target="_blank">Ziniaré</a> et au lycée <a href="https://www.africabizinfo.com/fr-BF/lyc%C3%A9e-newton-descartes" target="_blank">Newton Descartes</a> de <a href="https://mairie-ouaga.bf/accueil" target="_blank">Ouagadougou.</a>
+                      Gabriel a par la suite travaillé pour plusieurs associations et/ou organisations faîtières par lesquelles il a enseigné des enfants handicapés, animé des journées de sensibilisation par rapport au handicap et l'inclusion sociale au <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso.</a> Fervent défenseur des droits de personnes handicapées, Gabriel apprend à coder pour créer et développer ce site web statique en <a href="https://www.codecademy.com/learn/learn-html" target="_blank"> HTML</a> et <a href="https://www.codecademy.com/learn/learn-css?g_network=g&g_productchannel=&g_adid=640978473086&g_locinterest=&g_keyword=learn%20css&g_acctid=243-039-7011&g_adtype=&g_keywordid=kwd-295916433260&g_ifcreative=&g_campaign=account&g_locphysical=9000903&g_adgroupid=143797140665&g_productid=&g_source={sourceid}&g_merchantid=&g_placement=&g_partition=&g_campaignid=19230645493&g_ifproduct=&utm_id=t_kwd-295916433260:ag_143797140665:cp_19230645493:n_g:d_c&utm_source=google&utm_medium=paid-search&utm_term=learn%20css&utm_campaign=ESC_Language:_Basic_-_Exact&utm_content=640978473086&g_adtype=search&g_acctid=243-039-7011&gclid=EAIaIQobChMImIPLv6Sz_wIVbevjBx1MVgAoEAAYAiAAEgL9hfD_BwE" target="_blank">CSS</a> afin de présenter sa vision pour Tiki N'Yiki. 
                       Il est aussi un passionné de photographie, de lecture, d'histoire, de géographie, d'architecture et de hockey sur glace. 
                       <br>
                       <br> 
@@ -1508,7 +1507,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                 Mais au délà de ces collectes sporadiques de fonds pour financier des projets saisonniers, l'idée fondamentale était de créer une fondation munie d'un appareil administratif bénévole et un comité exécutif pour mieux réaliser les projets. Faire émerger l'idée de projet en résultats concrêts, palpables, durables pour les personnes handicapées fait partie du focus de Tiki N'Yiki. 
                 <br>
                 <br>
-                En 2017 malheureusement et heureusement Gabriel a pu quitter le <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso </a> pour s'exiler au <a href="https://www.canada.ca/fr.html" target="_blank">Canada </a>pour sa sécurité à cause de ses opinions politiques et du basculement du pays dans la violence du terrorisme cruel et sanguinaire. Les activités de Tiki N'Yiki ont été beaucoup affectées par cette crise. Présentement Gabriel est un résident permanent Canadien et veut étudier en programmation informatique afin de pouvoir 
+                En 2017 malheureusement et heureusement Gabriel était obligé de quitter le <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso </a> pour s'exiler au <a href="https://www.canada.ca/fr.html" target="_blank">Canada </a>pour des raisons de sécurité à cause de ses opinions politiques et du basculement du pays dans la violence extrême d'un terrorisme cruel et sanguinaire. Les activités de Tiki N'Yiki ont été beaucoup affectées par cette crise. Présentement Gabriel est un résident permanent Canadien et veut étudier en programmation informatique afin de pouvoir 
                 fonder un jour une accadémie  mixte d'informatique avec une priorité portée sur les étudiant-es handicapé-es.
                 <br>
                 <br>
