--- a/index.html
+++ b/index.html
@@ -749,10 +749,11 @@ animation: auto 12s infinite ease-in;
 .Cartes{
   display: grid;
   grid-template-rows: 1.5fr 0.5fr;
+  row-gap: 1rem;
   justify-content: center;
   justify-items: center;
   padding: 10px;
-  height: 800px;
+  height: 820px;
   width: 73.5%;
 }
 
@@ -773,10 +774,9 @@ animation: auto 12s infinite ease-in;
 
 .CRT2{
   width: 100%;
-  height: 320px;
   display: grid;
   grid-template-columns: 0.8fr 1.5fr;
-  column-gap: 0.1rem;
+  column-gap: 2rem;
   justify-content: space-between;
   justify-items: center;
 }
