--- a/index.html
+++ b/index.html
@@ -1323,7 +1323,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <b>
      <a href="https://www.education.gov.bf/accueil"  target="blank">1. L'éducation</a>
          <br>
-     <a href="file:///C:/Users/User/Documents/Health-Care.html" target="blank">2. La santé et les soins</a>
+     <a href="https://www.sante.gov.bf/accueil" target="blank">2. La santé et les soins</a>
          <br>
      <a href="https://fews.net/fr/west-africa/burkina-faso/food-security-outlook/february-2022" target="blank">3. La sécurité alimentaire</a>
          <br>
