--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                  justify-items: center;
                  background: #fff;
                  width: 100%;
-                 height: 95px;
+                 height: 93px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
@@ -178,7 +178,7 @@
   justify-content: center;
   align-items: center;
   width: 63px;
-  height: 62px;
+  height: 61px;
   font-size: 9.35px;
   font-family: 'arial black';
   border-radius: 50%;
@@ -230,7 +230,7 @@
             width: 100%;
             color: #676767e5;
             background: transparent;
-            margin-top: 0.7rem;
+            margin-top: 0.45rem;
           }
 
           .myDiv:hover{
@@ -252,7 +252,7 @@
             width: 100%;
             color: #676767e5;
             background: transparent;
-            margin-top: 0.7rem;
+            margin-top: 0.45rem;
           }
 
           .myDiv1:hover{
@@ -273,7 +273,7 @@
             width: 100%;
             color: #676767e5;
             background: transparent;
-            margin-top: 0.7rem;
+            margin-top: 0.45rem;
             }
 
           .myDiv2:hover{
@@ -294,7 +294,7 @@
             width: 100%;
             color: #676767e5;
             background: transparent;
-            margin-top: 0.7rem;
+            margin-top: 0.45rem;
            }
 
           .myDiv3:hover{
@@ -315,7 +315,7 @@
             width: 100%;
             color: #676767e5;
             background: transparent;
-            margin-top: 0.7rem;
+            margin-top: 0.45rem;
             }
 
           .myDiv6:hover{
@@ -1288,7 +1288,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         pour le déplacement. Elles vivent isolées et ceci rend difficile leurs vies car toute personne a souvent besoin de sociabiliser. 
         <br>
         <br>
-        <b style="color:rgb(6, 143, 6)">Sur la base de ces difficultés dûes à l'insuffisance d'infractrustures et services adaptés, Tiki N'Yiki a une vision de construire un centre adapté dans lequel la priorité sera axée sur l'education, les soins de santé, l'insécurité alimentaire et le changement climatique.</b>  
+        <b style="color:rgb(6, 143, 6); font-size: 18px;">Sur la base de ces difficultés constituées de l'insuffisance d'infractrustures et de services adaptés, Tiki N'Yiki envisage construire un centre accadémique informatique adapté dans lequel la priorité sera donnée aux étudiant-es handicapé-es. Le programme sera axé sur l'education, les soins de santé, l'insécurité alimentaire et le changement climatique entre autres.</b>  
         <br><br>
         Le centre pourra offrir des chambres adaptées aux enfants handicapés dont les familles vivent loin de la ville le long de l'année afin de leur permettre de demeurer près du lieu d'étude. Par conséquent ils seront permis d'avoir des visites de leurs familles et proches en cas de besoin sur la base d'un agenda. 
         <br>
@@ -1300,9 +1300,9 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         Nous connaissons tous l'importance de l'éducation comme un puissant outil pour tout humain. En effet le but premier de Tiki N'Yiki est de permettre aux enfants handicapés d'accéder à une bonne éducation et avoir des opportunities dont ils méritent malgré leur handicap. 
         <br>
         <br>
-        <b style="color:#ff0a06">Pour ce faire l'INCLUSION devrait être encouragée et supportée. </b>
+        <b style="color:#ff0a06">Pour ce faire l'inclusion devrait être encouragée et supportée. </b>
         <br><br>
-        <b style="font-size: 19px; font-family:'trebuchet ms'; color: rgba(3, 123, 252, 0.972); text-align: justify; line-height: 22px;">Avoir le droit à l'éducation, aux soins de santé, être à l'abri de l'insécurité alimentaire font partie des objectifs cruciaux que Tiki N'Yiki s'est fixés afin d'aider les enfants handicapés au Burkina Faso.</b>
+        <b style="font-size: 20px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color: rgba(3, 123, 252, 0.972); text-align: justify; line-height: 22px;">Avoir le droit à l'éducation, aux soins de santé, être à l'abri de l'insécurité alimentaire font partie des objectifs cruciaux que Tiki N'Yiki s'est fixés afin d'aider les enfants handicapés au Burkina Faso.</b>
     </p>
 </div>
 
@@ -1326,7 +1326,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
          <br>
      <a href="https://fews.net/fr/west-africa/burkina-faso/food-security-outlook/february-2022" target="blank">3. La sécurité alimentaire</a>
          <br>
-     <a href="https://www.nationalgeographic.com/environment/article/global-warming-effects" target="blank">4. Le changement climatique</a> 
+     <a href="https://www.un.org/fr/climatechange/what-is-climate-change" target="blank">4. Le changement climatique</a> 
      </b>
     </div>
 
@@ -1338,7 +1338,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       </strong>
     </span>
   <p>
-    <br><em style="color:#050819cc">L'éducation est un droit fondamental, un puissant vecteur de développement et l'un des meilleurs moyens de réduire la pauvreté, d'élever les niveaux de santé, de promouvoir l'égalité entre les sexes et de faire progresser la paix et la stabilité. <a href="https://www.banquemondiale.org/fr/topic/education/overview" target="_blank">[Selon la Banque Mondiale]</em></a> 
+    <br><em style="color:#050819cc">L'éducation est un droit fondamental, un puissant vecteur de développement et l'un des meilleurs moyens de réduire la pauvreté, d'élever les niveaux de santé, de promouvoir l'égalité entre les sexes et de faire progresser la paix et la stabilité. <a href="https://www.banquemondiale.org/fr/topic/education/overview" target="_blank" style="font-size: 15px;">[Sources: Banque Mondiale]</em></a> 
     <br>
     <br>
     C'est pour cela que les questions liées à l'éducation des personnes handicapées sont en priorité dans les projets de Tiki N'Yiki.  
@@ -1442,7 +1442,11 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         </span>
     
         <p>
-          <br> Le changement climatique n'est pas une blague comme certaines personnes parlent et pensent. C'est une réalité qui se passe présentement. Il suffit de remarquer les transformations que Mère Nature subit des âfres des inondations, 
+          <br> Le changement climatique n'est pas une blague comme certaines personnes parlent et pensent mais bel et bien une réalité qui se passe présentement. Les changements climatiques désignent les variations à long terme de la température et des modèles météorologiques. 
+          Il peut s’agir de variations naturelles, dues par exemple à celles du cycle solaire ou à des eruptions volcaniques massives. <a href="https://www.un.org/fr/climatechange/what-is-climate-change" target="_blank" style="font-size: 13px;">[Sources: Nations Unies]</a> 
+          <br>
+          <br>
+          Il suffit de remarquer les transformations que Mère Nature subit des âfres des inondations, 
           
           des feux de forêts comme ca se passe actuellement dans plusieurs provinces du Canada y compris <a href="https://ici.radio-canada.ca/nouvelle/1980819/feu-foret-broussaille-alberta-flamme-ciel-ouvert" target="_blank"> l'Alberta</a> <a href="https://ici.radio-canada.ca/nouvelle/1112373/environnement-feux-foret-dangers-quebec" target="_blank">le Québec</a> ou la <a href="https://www.lapresse.ca/actualites/national/2023-06-04/nouvelle-ecosse/l-incendie-de-foret-pres-d-halifax-maitrise-a-100-selon-les-autorites.php" target="_blank">Nouvelle-Ecosse</a>
         </a>
