--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@ animation: auto 12s infinite ease-in;
     width: 73.5%;
     height: auto;
     font-family:  'helvetica'; 
-    font-size: 1.11rem; 
+    font-size: 1.1rem; 
     color: rgba(30, 30, 30, 0.959);
     line-height: 26px;
     padding: 10px;
@@ -765,9 +765,9 @@ animation: auto 12s infinite ease-in;
     width: 100%;
     height: auto;
     font-family:  'helvetica'; 
-    font-size: 1.11rem; 
+    font-size: 1.1rem; 
     color: rgba(30, 30, 30, 0.959);
-    line-height: 24.65px;
+    line-height: 26px;
     word-spacing: 1px;
 }
 
@@ -1288,7 +1288,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         pour le déplacement. Elles vivent isolées et ceci rend difficile leurs vies car toute personne a souvent besoin de sociabiliser. 
         <br>
         <br>
-        <b style="color:rgb(6, 143, 6); font-size: 18px;">Sur la base de ces difficultés constituées de l'insuffisance d'infractrustures et de services adaptés, Tiki N'Yiki envisage construire un centre accadémique informatique adapté dans lequel la priorité sera donnée aux étudiant-es handicapé-es. Le programme sera axé sur l'education, les soins de santé, l'insécurité alimentaire et le changement climatique entre autres.</b>  
+        <b style="color:rgb(26, 90, 160); font-size: 22px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Sur la base de ces difficultés constituées des barrières sociales, de l'insuffisance d'infractrustures et de services adaptés, Tiki N'Yiki envisage construire un centre accadémique adapté nommé Accadémie Tiki N'Yiki dans lequel la priorité sera donnée aux étudiant-es handicapé-es. 
+          Les programme seront axés sur l'education, les soins de santé, l'insécurité alimentaire et le changement climatique entre autres.</b>  
         <br><br>
         Le centre pourra offrir des chambres adaptées aux enfants handicapés dont les familles vivent loin de la ville le long de l'année afin de leur permettre de demeurer près du lieu d'étude. Par conséquent ils seront permis d'avoir des visites de leurs familles et proches en cas de besoin sur la base d'un agenda. 
         <br>
