--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
             text-align: right;
             width: 100%; 
             height: 180px; 
-            background: rgba(51, 169, 232, 0.911);
-            color: #fff;
+            background: rgba(200, 200, 200, 0.392);
+            color: rgba(0, 0, 139, 0.879);
             font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
             font-size: 2rem;
           }
@@ -447,7 +447,7 @@ hr{
    
 }
 ::-webkit-scrollbar-track-piece{
-    background: rgba(213, 213, 213, 0.925);
+    background: rgba(213, 213, 213, 0.953);
     padding: 10px;
 }
 ::-webkit-scrollbar-thumb{
