--- a/index.html
+++ b/index.html
@@ -1025,7 +1025,8 @@ function myFunction() {
 
 </div>
 
-<div class="navbar0"><p style="margin-left: 12rem;"> Bienvenue ! Site web en développement ! Bonne Visite !</p></div>
+<div class="navbar0"><p style="margin-left: 12rem;"> 
+  Bienvenue ! Site web en développement ! Bonne Visite !</p>
 </div>
 <div class="fwrapper">
 
@@ -1566,7 +1567,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <span style="justify-self: center;"> <b>Haut De Page</b></span>
     </div>
 </a>
-            
+</div>
+</div>       
 
 
 <div class="footer">
